  [Michele Simionato]
  Fixed the encode/decode functions in baselib.python3compat

  [Daniele Viganò]
  * Added Python 3 compatibility to speedups

  [Trevor Allen/Graeme Weatherill]
  * Adds Queen Charlotte strike slip magnitude scaling relation (WC1994_QCSS)

python-oq-hazardlib (0.20.0-0~precise01) precise; urgency=low
  [Yen-Shin Chen]
  * Fixed the rupture count in simple fault while multiple hypocenter locations or slip directions assigned.

  [Michele Simionato]
  * Fixed the serialization on HDF5 of dictionaries with keys containing slashes
  * Renamed Imtls -> DictArray
  * Removed the .id attribute from the Site class

  [Graeme Weatherill]
  * Updates coefficients to Montalva et al. GMPE and updates year to 2016

  [Michele Simionato]
  * Added a Tile class to filter efficiently point sources
  * Removed the function `hazard_curve.hazard_curves` that has been
    deprecated from November 2014
  * Fixed the string representation of GSIM instances: this solves a serious
    bug in the GMPETable
  * Removed the rupture_site_filter where it was not used

  [Daniele Viganò]
  * Added support for Ubuntu 16.04 (xenial) packages

  [Michele Simionato]
  * Major change to the GmfCalculator API

  [Matteo Nastasi]
  * Backport of libhdf5 and h5py for ubuntu 'precise' serie

  [Michele Simionato]
  * Added a PickleableSequence class to serialize Python objects on HDF5

  [Graeme Weatherill]
  * Fixes Z1.0 units bug in Abrahamson, Silva and Kamai (2014)
  * Added modifications to Zhao (2006) inslab GMPE and implements
    Atkinson (2008') - needed for 2014 US NSHMP

  [Michele Simionato]
  * Improved the validity check on the Intensity Measure Type
  * Showing the `calc_id` in Monitor instances string representation
  * Added a h5py.File subclass to manage the serialization of objects
    satisfying the HDF5 protocol used by the OpenQuake software
  * Added a LiteralAttrs class to serialize literal attributes on HDF5