@@ -1,5 +1,6 @@
   [Michele Simionato]
-  Fixed the encode/decode functions in baselib.python3compat
+  * Replaced pydoc.locate with a call to importlib to work around a QGIS issue
+  * Fixed the encode/decode functions in baselib.python3compat
 
   [Daniele Viganò]
   * Added Python 3 compatibility to speedups
